@@ -1,3 +1,9 @@
+Sun Feb  6 22:00:46 2005  Manish Singh  <yosh@gimp.org>
+
+	* abicheck.sh: feed the contents of config.h and glibconfig.h
+	into the preprocessor, since glib.symbols could need #defines
+	from them.
+
 2005-01-12  Matthias Clasen  <mclasen@redhat.com>
 
 	Cosmetic fixes (#163792, Benoît Carpentier):
